--- a/src/main/resources/templates/fragments/supervisorHeader.html
+++ b/src/main/resources/templates/fragments/supervisorHeader.html
@@ -32,6 +32,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //font -->
     <script src="/js/jquery-1.11.1.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+
+    <style>
+        /* Sidebar styles */
+        .sidebar {
+            height: 100%;
+            width: 250px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #333;
+            padding-top: 20px;
+        }
+
+        .sidebar a {
+            padding: 15px;
+            text-decoration: none;
+            font-size: 18px;
+            color: #fff;
+            display: block;
+        }
+
+        .sidebar a:hover {
+            background-color: #555;
+        }
+
+        /* Main content styles */
+        .main-content {
+            margin-left: 250px;
+            padding: 20px;
+        }
+    </style>
 </head>
 
 <th:block th:fragment="header">
@@ -42,8 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <img src="/banner/IMAGE FARM (1).svg" alt=" " style="width: 200px"/></a>
         </div>
         <div>
-            <nav class="navbar navbar-expand-lg" >
-
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid" id="menubar">
                     <a class="navbar-brand menu" href="/photo/PHOTO">PICTURE</a>
                     <a class="navbar-brand menu" href="/illust/ILLUST">ILLUSTRATION</a>
@@ -65,12 +95,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             마이팜
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-
                             <li><a class="dropdown-item" sec:authorize="isAuthenticated()" href="/cart">장바구니</a>
                             </li>
                             <li><a class="dropdown-item" sec:authorize="isAuthenticated()" href="/orders">구매이력</a>
                             </li>
-                            <li><a class="dropdown-item" sec:authorize="isAuthenticated()" href="/members/myPage">내 정보</a></li>
+                            <li><a class="dropdown-item" sec:authorize="isAuthenticated()" href="/members/myPage">내
+                                정보</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -89,9 +119,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     });
                 </script>
                 <div>
-
                     <div class="loginbutton">
-
                         <div class=" loginhead loginbox" sec:authorize="isAnonymous()" style="margin-top: 10px">
                             <a href="/members/login">로그인</a>
                         </div>
@@ -100,7 +128,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                     </div>
                 </div>
-
                 <div class="header-bottom-w3ls">
                 </div>
             </nav>
@@ -109,3 +136,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </th:block>
 
 </html>
+
+
