--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layouts/layout2}">
 
-<head>
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-</head>
+<!--<head>-->
+<!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
+<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+<!--</head>-->
 
 <!-- 사용자 스크립트 추가 -->
+
 <th:block layout:fragment="script">
 
     <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
     <!-- iamport.payment.js -->
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
     <script>
         var IMP = window.IMP;
         IMP.init("imp76874631");
@@ -27,29 +30,35 @@
         var makeMerchantUid = hours +  minutes + seconds + milliseconds;
 
 
+
+
         function requestPay() {
+
             IMP.request_pay({
-                pg : 'kcp.A52CY',
-                pay_method : 'card',
-                merchant_uid: "IMP"+makeMerchantUid,
-                name : '당근 10kg',
-                amount : 100,
-                buyer_email : 'Iamport@chai.finance',
-                buyer_name : '아임포트 기술지원팀',
-                buyer_tel : '010-1234-5678',
-                buyer_addr : '서울특별시 강남구 삼성동',
-                buyer_postcode : '123-456'
+                pg: 'kcp.A52CY',
+                pay_method: 'card',
+                merchant_uid: "IMP" + makeMerchantUid,
+                name: `[[${item.itemNm}]]`,
+                amount: `[[${item.price}]]`,
+                buyer_email: '[[${#authentication.name}]]',
+                buyer_name: '[[${#authentication.name}]]'
+
 
             }, function (rsp) { // callback
                 if (rsp.success) {
                     console.log(rsp);
+                    window.location.href = "/item/pay/{itemId}";
                 } else {
                     console.log(rsp);
                 }
             });
 
-
         }
+
+
+
+
+
     </script>
 
     <script th:inline="javascript">
@@ -69,7 +78,7 @@
             $("#totalPrice").html(totalPrice + '원');
         }
 
-        function order() {
+        function order_pay() {
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
@@ -93,8 +102,9 @@
                 dataType: "json",
                 cache: false,
                 success: function (result, status) {
-                    alert("주문이 완료 되었습니다.");
+                    requestPay();
                     location.href = '/index';
+
                 },
                 error: function (jqXHR, status, error) {
 
@@ -108,49 +118,15 @@
                 }
             });
 
-
-            function addCart() {
-                var token = $("meta[name='_csrf']").attr("content");
-                var header = $("meta[name='_csrf_header']").attr("content");
-
-                var url = "/cart";
-                var paramData = {
-                    itemId: $("#itemId").val(),
-                    count: $("#count").val()
-                };
-
-                var param = JSON.stringify(paramData);
-
-                $.ajax({
-                    url: url,
-                    type: "POST",
-                    contentType: "application/json",
-                    data: param,
-                    beforeSend: function (xhr) {
-                        /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-                        xhr.setRequestHeader(header, token);
-                    },
-                    dataType: "json",
-                    cache: false,
-                    success: function (result, status) {
-                        alert("상품을 장바구니에 담았습니다.");
-                        location.href = '/index';
-                    },
-                    error: function (jqXHR, status, error) {
-
-                        if (jqXHR.status == '401') {
-                            alert('로그인 후 이용해주세요');
-                            location.href = '/members/login';
-                        } else {
-                            alert(jqXHR.responseText);
-                        }
-
-                    }
-
+            $(document).ready(function() {
+                $('#ajaxButton').click(function() {
+                    order_pay();
                 });
 
 
-            }
+
+        });
+
         }
 
     </script>
@@ -249,7 +225,6 @@
                             </form>
                             <button class="w3ls-cart w3ls-cart-like"><i class="fa fa-heart-o" aria-hidden="true"></i> Add to Wishlist</button>
 
-
                             <button class="w3ls-cart w3ls-cart-like" onclick="requestPay()">
 <!--                                <a th:href="@{'/download/' + ${item.itemImgDtoList[0].id}}" download="image.jpg">-->
 <!--                                    <a href="/payment/payment.html">-->
@@ -257,8 +232,6 @@
                                 다운로드 하기
 <!--                                </a>-->
                             </button>
-
-
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -289,6 +262,13 @@
                                         <i class="fa fa-info-circle fa-icon" aria-hidden="true"></i> additional information <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
                                     </a>
                                 </h4>
+                            </div>
+                            <div>
+
+                                <a>
+                                <span th:text="${item.hashtag}"></span>
+                                </a>
+
                             </div>
                             <div id="collapseTwo" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
