--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -48,10 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="sign-form">
         <form action="/members/update" method="post">
             <input type="hidden" name="id" th:value="${member.id}">
-<<<<<<< HEAD
             <input type="hidden" name="social" th:value="${member.social}">
-=======
->>>>>>> f4606a3bc4ab0d9f9c75e328c690296c78097ab0
             <div class="form-group">
                 <label th:for="email">이메일</label>
                 <input type="text" name="email" th:value="${member.email}" class="form-control" style="width:250px;"
@@ -73,23 +70,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="form-group">
                 <label th:for="role">역할</label>
                 <input type="text" name="role" class="form-control" style="width:250px;"
-                       th:value="${#strings.equals(member.role, 'ADMIN') ? 'ADMIN' : 'USER'}" readonly>
+                       th:value="${#strings.equals(member.role, 'ADMIN') ? 'ADMIN' : (#strings.equals(member.role, 'SUPERVISOR') ? 'SUPERVISOR' : 'USER')}" readonly>
             </div>
             <div class="form-group">
                 <label th:for="email">가입일</label>
                 <input type="text" name="regTime" th:value="${#temporals.format(member.regTime, 'yyyy-MM-dd')}"
                        class="form-control" style="width:250px;" readonly>
             </div>
-<<<<<<< HEAD
 
-=======
->>>>>>> f4606a3bc4ab0d9f9c75e328c690296c78097ab0
             <div class="form-group">
                 <button id="updateMemberInfo" class="btn btn-primary">회원정보 수정</button>
             </div>
+
             <div class="form-group">
                 <a href="/members/delete" class="btn btn-danger">회원 탈퇴</a>
             </div>
+
             <div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             </div>
