--- a/src/main/resources/templates/pay/payDown.html
+++ b/src/main/resources/templates/pay/payDown.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layouts/layout2}">
 
 <!--<head>-->
@@ -12,54 +11,6 @@
 <!-- 사용자 스크립트 추가 -->
 
 <th:block layout:fragment="script">
-
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
-    <!-- iamport.payment.js -->
-    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
-    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
-    <script>
-        var IMP = window.IMP;
-        IMP.init("imp76874631");
-
-        var today = new Date();
-        var hours = today.getHours(); // 시
-        var minutes = today.getMinutes();  // 분
-        var seconds = today.getSeconds();  // 초
-        var milliseconds = today.getMilliseconds();
-        var makeMerchantUid = hours +  minutes + seconds + milliseconds;
-
-
-
-
-        function requestPay() {
-
-            IMP.request_pay({
-                pg: 'kcp.A52CY',
-                pay_method: 'card',
-                merchant_uid: "IMP" + makeMerchantUid,
-                name: `[[${item.itemNm}]]`,
-                amount: `[[${item.price}]]`,
-                buyer_email: '[[${#authentication.name}]]',
-                buyer_name: '[[${#authentication.name}]]'
-
-
-            }, function (rsp) { // callback
-                if (rsp.success) {
-                    console.log(rsp);
-                    window.location.href = '/downloadFile?paymentId=' + rsp.imp_uid;
-                } else {
-                    console.log(rsp);
-                }
-            });
-
-        }
-
-
-
-
-
-    </script>
 
     <script th:inline="javascript">
         $(document).ready(function(){
@@ -138,42 +89,48 @@
 <th:block layout:fragment="css">
     <style>
 
-        .category_txt{
-            font-size: 20px;
-            margin-left: 2rem;
+        .products-down{
+            width: 30%;
+            display: block;
+            margin: auto;
+            padding-top: 4rem;
+            padding-bottom: 10rem;
+
         }
 
-        .price_txt{
-            font-size: 40px;
-            margin-left: 4rem;
+        .contain{
+            object-fit: fill;
+            box-shadow:0 5px 20px rgba(0, 0, 0, 0.2);
         }
 
-        .single-price-text{
-            padding-left: 3rem;
+        .btn_div{
+            margin-top: 3rem;
+            margin-bottom: 3rem;
+
+            background: none;
+            /*border: 1px solid  #00e58b;*/
+            /*color: #00e58b;*/
+            width: 28%;
+            font-weight: 300;
+            padding: 0.6em 0;
+            -webkit-transition: .5s all;
+            -moz-transition: .5s all;
+            -o-transition: .5s all;
+            -ms-transition: .5s all;
+            transition: .5s all;
+            display: inline-block;
+            background: #00e58b;
+            outline: none;
+            border: 1px solid #00e58b;
+            color: #fff;
         }
 
-        /*.mgb-15{*/
-        /*    margin-bottom:15px;*/
-        /*}*/
-        /*.mgt-30{*/
-        /*    margin-top:30px;*/
-        /*}*/
-        /*.mgt-50{*/
-        /*    margin-top:50px;*/
-        /*}*/
-        /*.repImgDiv{*/
-        /*    margin-right:15px;*/
-        /*    height:auto;*/
-        /*    width:50%;*/
-        /*}*/
-        /*.repImg{*/
-        /*    width:100%;*/
-        /*    height:400px;*/
-        /*}*/
-        /*.wd50{*/
-        /*    height:auto;*/
-        /*    width:50%;*/
-        /*}*/
+        .btn_div:hover {
+            background: #00e58b;
+            color: #fff;
+        }
+
+
     </style>
 </th:block>
 
@@ -181,132 +138,26 @@
 
 
 
-    <input type="hidden" id="itemId" th:value="${item.id}">
+
+    <div class="products-down">
+        <img th:src="${item.itemImgDtoList[0].imgUrl}" th:alt="${item.itemNm}" class="contain">
 
 
-    <div class="products">
-        <div class="container">
-            <div class="single-page">
-                <div class="single-page-row" id="detail-21">
-                    <div class="col-md-6 single-top-left">
-                        <div class="flexslider">
-                            <ul class="slides">
-                                <img th:src="${item.itemImgDtoList[0].imgUrl}" class = "rounded repImg" th:alt="${item.itemNm}">
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-6 single-top-right">
-                        <h3 class="item_name"> <div th:text="${item.itemNm}"></div></h3>
-                        <div class="single-rating">
-                            <ul>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star-o" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
-                        <div class="single-price">
-                            <ul>
-                                <li> <div class="category_txt"> <span th:text="${item.category}" ></span>
-                                    <div class="price_txt"><span th:text="${item.price}"></span>\</div>
-                                </div> </li>
-                                <li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
-                        <p class="single-price-text" th:text="${item.itemDetail}"></p>
-                        <form action="#" method="post">
-                            <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
-                            <input type="hidden" name="cmd" value="_cart" />
-                            <input type="hidden" name="add" value="1" />
-                            <input type="hidden" name="w3ls1_item" value="Handbag" />
-                            <input type="hidden" name="amount" value="540.00" />
-                            <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add to cart</button>
-                        </form>
+        <div class="btn_div">
+            <button class="single-top-rigt w3ls-cart" style="display: block; margin: auto;">
+                <a th:href="@{'/download/' + ${item.itemImgDtoList[0].id}}" download="image.jpg">
+                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+                    다운로드 하기
+                </a></button>
+        </div>
 
-                        <button class="w3ls-cart w3ls-cart-like"><i class="fa fa-heart-o" aria-hidden="true"></i> Add to Wishlist</button>
+    </div>
 
-                        <button class="w3ls-cart w3ls-cart-like">
-                            <a th:href="@{'/download/' + ${item.itemImgDtoList[0].id}}" download="image.jpg">
-                            <i class="fa fa-heart-o" aria-hidden="true"></i>
-                            다운로드 하기
-                         </a></button>
 
-                    </div>
+
+
+
                     <div class="clearfix"> </div>
-                </div>
-            </div>
-
-            <!-- collapse-tabs -->
-            <div class="collpse tabs">
-                <h3 class="w3ls-title">About this image</h3>
-                <div class="panel-group collpse" id="accordion" role="tablist" aria-multiselectable="true">
-                    <!--					<div class="panel panel-default">-->
-                    <!--						<div class="panel-heading" role="tab" id="headingOne">-->
-                    <!--							<h4 class="panel-title">-->
-                    <!--								<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">-->
-                    <!--									<i class="fa fa-file-text-o fa-icon" aria-hidden="true"></i> Description <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>-->
-                    <!--								</a>-->
-                    <!--							</h4>-->
-                    <!--						</div>-->
-                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                        <!--							<div class="panel-body">-->
-                        <!--								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.-->
-                        <!--							</div>-->
-                    </div>
-                    <!--					</div>-->
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingTwo">
-                            <h4 class="panel-title">
-                                <a class="collapsed pa_italic" style="padding: 12.8px 24px">
-                                    <i class="fa fa-info-circle fa-icon" aria-hidden="true"></i> additional information <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
-                                </a>
-                            </h4>
-                        </div>
-                        <div>
-
-                            <a>
-                                <span th:text="${item.hashtag}"></span>
-                            </a>
-
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingTwo">
-                            <div class="panel-body">
-                                귀여운, 캐릭터, 일러스트
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingThree">
-                            <h4 class="panel-title">
-                                <a class="collapsed pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <i class="fa fa-check-square-o fa-icon" aria-hidden="true"></i> reviews (5) <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                            <div class="panel-body">
-                                리뷰 및 댓글
-                            </div>
-                            <div class="panel-body">
-                                리뷰 및 댓글
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingFour">
-                            <h4 class="panel-title">
-                                <a class="collapsed pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                    <i class="fa fa-question-circle fa-icon" aria-hidden="true"></i> help <span class="fa fa-angle-down fa-arrow" aria-hidden="true"></span> <i class="fa fa-angle-up fa-arrow" aria-hidden="true"></i>
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
 
