--- a/src/main/resources/templates/supervisor/svMembersMng.html
+++ b/src/main/resources/templates/supervisor/svMembersMng.html
@@ -103,11 +103,12 @@
     <!-- 페이징 및 페이지 내비게이션 -->
     <div th:if="${members.totalPages > 1}" class="pagination justify-content-center">
         <ul class="pagination">
-                        <li th:class="${members.first} ? 'disabled' : ''" class="page-item">
-                            <a th:if="${not members.first}" th:href="@{/supervisor/members(page=0, size=${members.size})}" class="page-link" aria-label="First">
-                                <span aria-hidden="true">First</span>
-                            </a>
-                        </li>
+            <li th:class="${members.first} ? 'disabled' : ''" class="page-item">
+                <a th:if="${not members.first}" th:href="@{/supervisor/members(page=0, size=${members.size})}"
+                   class="page-link" aria-label="First">
+                    <span aria-hidden="true">First</span>
+                </a>
+            </li>
             <li th:class="${members.first} ? 'disabled'" class="page-item">
                 <a th:if="${not members.first}"
                    th:href="@{/supervisor/members(page=${members.number - 1}, size=${members.size})}" class="page-link"
@@ -128,59 +129,15 @@
                     <span aria-hidden='true'>Next</span>
                 </a>
             </li>
-                        <li th:class="${members.last} ? 'disabled' : ''" class="page-item">
-                            <a th:if="${not members.last}" th:href="@{/supervisor/members(page=${members.totalPages - 1}, size=${members.size})}" class="page-link" aria-label="Last">
-                                <span aria-hidden="true">Last</span>
-                            </a>
-                        </li>
+            <li th:class="${members.last} ? 'disabled' : ''" class="page-item">
+                <a th:if="${not members.last}"
+                   th:href="@{/supervisor/members(page=${members.totalPages - 1}, size=${members.size})}"
+                   class="page-link" aria-label="Last">
+                    <span aria-hidden="true">Last</span>
+                </a>
+            </li>
         </ul>
     </div>
-
-
-    <!-- 사용자 검색 폼 추가 -->
-    <!--    <div class="form-inline justify-content-center" th:object="${memberSearchDto}">-->
-    <!--        <select th:field="*{searchType}" class="form-control" style="width:auto;">-->
-    <!--            <option value="">검색 유형 선택</option>-->
-    <!--            <option value="name">이름</option>-->
-    <!--            <option value="email">이메일</option>-->
-    <!--        </select>-->
-    <!--        <select th:field="*{role}" class="form-control" style="width:auto;">-->
-    <!--            <option value="">전체 역할</option>-->
-    <!--            <option value="ADMIN">판매자</option>-->
-    <!--            <option value="USER">사용자</option>-->
-    <!--        </select>-->
-    <!--        <input th:field="*{keyword}" type="text" class="form-control" placeholder="검색어를 입력하세요">-->
-    <!--        <button id="searchBtn" type="button" class="btn btn-primary" onclick="searchMembers()">검색</button>-->
-    <!--    </div>-->
-
-
-    <!--    <script th:inline="javascript">-->
-    <!--        function searchMembers() {-->
-    <!--            var searchDateType = $("#searchDateType").val();-->
-    <!--            var searchRole = $("#searchRole").val();-->
-    <!--            var searchMemberName = $("#searchMemberName").val();-->
-
-    <!--            // 검색 조건을 사용하여 검색 결과 페이지로 이동-->
-    <!--            // 필요한 파라미터를 URL에 추가하여 검색 조건을 서버로 전달합니다.-->
-    <!--            var url = "/supervisor/members?page=0"; // 여기를 "members"로 수정-->
-
-    <!--            if (searchDateType) {-->
-    <!--                url += "&searchDateType=" + searchDateType;-->
-    <!--            }-->
-
-    <!--            if (searchRole) {-->
-    <!--                url += "&searchRole=" + searchRole;-->
-    <!--            }-->
-
-    <!--            if (searchMemberName) {-->
-    <!--                url += "&searchMemberName=" + searchMemberName;-->
-    <!--            }-->
-
-    <!--            location.href = url;-->
-    <!--        }-->
-    <!--    </script>-->
-
-
 </div>
 
 </html>
