--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -20,6 +20,7 @@
     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
 
     <script>
+
         var IMP = window.IMP;
         IMP.init("imp76874631");
 
@@ -33,32 +34,39 @@
 
 
 
+
         function requestPay() {
 
-            IMP.request_pay({
-                pg: 'kcp.A52CY',
-                pay_method: 'card',
-                merchant_uid: "IMP" + makeMerchantUid,
-                name: `[[${item.itemNm}]]`,
-                amount: `[[${item.price}]]`,
-                buyer_email: '[[${#authentication.name}]]',
-                buyer_name: '[[${#authentication.name}]]'
+            var loggedIn
+
+            if (!loggedIn) {
+                alert("로그인 후 결제가 가능합니다.");
+                window.location.href = "/members/login"; // 로그인 페이지로 리다이렉트
+                return; // 결제 시도 중지
+            } else {
 
 
-            }, function (rsp) { // callback
-                if (rsp.success) {
-                    console.log(rsp);
-                    window.location.href = "/item/pay/" + `[[${item.id}]]`;
-                } else {
-                    console.log(rsp);
-                }
-            });
+                IMP.request_pay({
+                    pg: 'kcp.A52CY',
+                    pay_method: 'card',
+                    merchant_uid: "IMP" + makeMerchantUid,
+                    name: `[[${item.itemNm}]]`,
+                    amount: `[[${item.price}]]`,
+                    buyer_email: '[[${#authentication.name}]]',
+                    buyer_name: '[[${#authentication.name}]]'
 
+
+                }, function (rsp) { // callback
+                    if (rsp.success) {
+                        console.log(rsp);
+                        window.location.href = "/item/pay/" + `[[${item.id}]]`;
+                    } else {
+                        console.log(rsp);
+                    }
+                });
+
+            }
         }
-
-
-
-
 
 
 
@@ -212,7 +220,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-6 single-top-right">
+                    <div class="col-md-6 single-top-right" >
                         <h3 class="item_name"> <div th:text="${item.itemNm}"></div></h3>
                         <div class="single-rating">
                             <ul>
@@ -234,22 +242,19 @@
 
                         <p class="single-price-text" th:text="${item.itemDetail}"></p>
 
-                        <form action="#" method="post">
-                            <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
-                            <input type="hidden" name="cmd" value="_cart" />
-                            <input type="hidden" name="add" value="1" />
-                            <input type="hidden" name="w3ls1_item" value="Handbag" />
-                            <input type="hidden" name="amount" value="540.00" />
-                            <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i>장바구니</button>
-                        </form>
+                        <!--                        <form action="#" method="post">-->
+                        <input type="hidden" name="count" id="count" class="form-control" value="1" min="1">
+                        <input type="hidden" name="cmd" value="_cart" />
+                        <input type="hidden" name="add" value="1" />
+                        <!--                            <input type="hidden" name="w3ls1_item" value="Handbag" />-->
+                        <!--                            <input type="hidden" name="amount" value="540.00" />-->
+                        <button type="submit" class="w3ls-cart" onclick="addCart()"><i class="fa fa-cart-plus" aria-hidden="true"></i>장바구니</button>
+                        <!--                        </form>-->
 
 
                         <button class="w3ls-cart w3ls-cart-like" onclick="requestPay()">
-                            <!--                                <a th:href="@{'/download/' + ${item.itemImgDtoList[0].id}}" download="image.jpg">-->
-                            <!--                                    <a href="/payment/payment.html">-->
                             <i class="fa fa-heart-o" aria-hidden="true"></i>
                             다운로드
-                            <!--                                </a>-->
                         </button>
                     </div>
                     <div class="clearfix"> </div>
